<resources>
    <string name="app_name">DELEX</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZGVsdGFvbngiLCJhIjoiY2pnbG4yd3RuMTRqMjJ3dDQwZGd0Z2NmeCJ9.6g2Ah8Uowdsqk2PwQHbUdw</string>
    <string name="tmap_api_key">fc10f46e-776e-46a7-b890-78e5ab5c312d</string>
    <string name="naver_client_id">fork_zHA1KnV_xRZ63y9</string>
    <string name="naver_client_secret">4eGzY3ZfHt</string>
    <string name="invite_app_name">DELEX</string>
    <string name="app_website">delex.co.kr</string>
    <string name="on_demand_service">DELEX ON-DEMAND COURIER &amp; DELIVERY SERVICES.</string>
    <string name="action_settings">설정</string>
    <string name="action_cancel">취소</string>
    <string name="action_exit">나가기</string>
    <string name="action_ok">확인</string>
    <string name="view">보기</string>
    <string name="liveTrack">실시간\n 추적</string>
    <string name="network_problem">인터넷에 연결되지 않았습니다.</string>
    <string name="no_email">유효한 이메일주소가 아닙니다</string>
    <string name="valid_email">Email id can be use to register with iDeliver!</string>
    <string name="something_went_wrong">ㅜㅜ..! 오류가 발생했습니다.. 다시 시도해 주세요</string>
    <string name="system_error">경고 !</string>
    <string name="note">노트!</string>
    <string name="loading">로딩&#8230;</string>
    <string name="logging_in">로그인&#8230;</string>
    <string name="signin_up">로그인 가입&#8230;</string>
    <string name="logging_out">로그아웃&#8230;</string>
    <string name="sending">발송&#8230;</string>
    <string name="validating">유효성확인&#8230;</string>
    <string name="mail_validating">이메일ID 유효성 체크&#8230;</string>
    <string name="phone_validating">전화번호 유효성 체크&#8230;</string>
    <string name="phone_invalid">유효한 전화번호를 입력해 주세요</string>
    <string name="email_invalid">유효한 이메일주소를 입력해 주세요</string>
    <string name="wait">잠시만 기다려주세요&#8230;.</string>
    <string name="p_next">다음&#8230;</string>
    <string name="adding_shipment">배송추가&#8230;</string>
    <string name="ExpirationDateHelp">만기일 (MM/YY)</string>
    <string name="share">공유</string>
    <string name="date">일자</string>
    <string name="skip">건너뛰기</string>
    <string name="confirm_number">번호확인</string>
    <string name="verify_number">휴대폰번호확인</string>
    <string name="verify_otp">코드확인</string>
    <string name="otp_mandatory">OTP 는 필수입니다</string>
    <string name="confirm">확인</string>
    <string name="add_card">카드추가</string>
    <string name="logo_font">DELEX</string>
    <string name="caption">Because you have things to do&#8230;</string>
    <string name="invite_msg_1">안녕하세요!</string>
    <string name="invite_msg_2">제공된 코드를 이용해서</string>
    <string name="invite_msg_3">회원에 가입하세요 </string>
    <string name="invite_msg_4">당신만의 배송기사가 필요하세요? </string>
    <string name="invite_msg_5">를 이용해보세요~ 바로 오늘!</string>
    <string name="sign_up">회원가입</string>
    <string name="sign_up1">회원가입</string>
    <string name="sign_in">로그인</string>
    <string name="sign_in1">로그인</string>
    <string name="nonetwork">인터넷에 연결되지 않았습니다</string>
    <string name="edit">수정</string>
    <string name="alert">경고</string>
    <string name="alert_cap">경고</string>
    <string name="messagealert">메세지</string>
    <string name="login_don_t_have_an_account_sign_up">계정이 없으세요? 회원가입</string>
    <string name="login_email_phone_no">이메일</string>
    <string name="forgot_pass_error">DELEX에 등록되지 않은 이메일 주소입니다, 이 이메일 주소를 이용해서 DELEX 회원이 되세요!</string>
    <string name="forgotPassword">비밀번호 분실 ?</string>
    <string name="emailAddress">이메일주소</string>
    <string name="resetPswdUsingPhNoLabel">비밀번호 재발행을 위한 인증번호를 전송받을 \n 휴대전화 번호를 입력해 주세요</string>
    <string name="reset_passwd_email_phone_info">등록된 이메일 주소나 휴대전화 번호를 입력해 주세요.\n 새로운 비밀전호를 받기 위한 인증번호가 전송됩니다.</string>
    <string name="phone_verfication_info">등록된 휴대전화 번호를 입력해 주세요.\n새로운 휴대폰 번호 변경을 위한 인증번호가 전송됩니다.</string>
    <string name="i_accept">I accept</string>
    <string name="and">and</string>
    <string name="terms_and_cond">약관 &amp; 개인정보보호정책</string>
    <string name="failImageUpload">이미지 업로드가 실패하였습니다 다시 시도해 주세요..</string>
    <string name="first_name_mandatory">이름은 필수입니다</string>
    <string name="first_name_contains_later">Name should contain laters only</string>
    <string name="last_name_contains_later">Last name should contain laters only</string>
    <string name="email_mandatory">이메일은 필수입니다</string>
    <string name="mandatory">이 필드는 필수항목입니다.</string>
    <string name="email_invalid1">잘못된 이메일주소 입니다</string>
    <string name="invalid_input">잘못된 입력입니다</string>
    <string name="pass_validation_Error">비밀번호는 최소 하나의 영대문자 , 하나의 영소문자 and 하나의 숫자를 포함해야 합니다.</string>
    <string name="contact_mandatory">휴대전화 번호는 필수입니다</string>
    <string name="contact_invalid">유효한 휴대전화 번호를 입력해 주세요</string>
    <string name="password_mandatory">비밀번호는 필수입니다</string>
    <string name="password_not_empty">비밀번호는 공백일 수 없습니다</string>
    <string name="password_changed">비밀번호가 변경되었습니다</string>
    <string name="enter_new_password">새비밀번호 입력</string>
    <string name="enter_confirm_password">새비밀번호 입력 확인</string>
    <string name="password_not_matched">비밀번호가 일치하지 않습니다</string>
    <string name="accept_tnc">Please Accept Terms and Conditions</string>
    <string name="terms">Terms</string>
    <string name="choose">선택</string>
    <string name="company_address">회사주소</string>
    <string name="phoneNumber">전화번호 *</string>
    <string name="forgotPasswordName">이름 *</string>
    <string name="smsverify">You will receive a text message on your</string>
    <string name="autoverify">registered mobile number with the OTP.</string>
    <string name="enterotp">Please enter that 5 digit number</string>
    <string name="enterotp2">text area below</string>
    <string name="notreceive">Did not receive it ?</string>
    <string name="resend_code">CODE 재발송\?</string>
    <string name="resend_sms">SMS 재발송</string>
    <string name="otpmessage">You will receive a text message on your registered mobile number with the OTP , please enter that 5 digit number in the text area below</string>
    <string name="card_info">카드정보</string>
    <string name="expiry">EXP</string>
    <string name="delete_card">카드삭제</string>
    <string name="Card_Info">카드 상세정보</string>
    <string name="card_removed">카드가 삭제되었습니다</string>
    <string name="network_alert_title">네트워크 설정</string>
    <string name="network_alert_message">Network is slow or Network service is not enabled. Do you want to go to settings menu?</string>
    <string name="location_alert_title">Location Settings</string>
    <string name="location_alert_message">Location service is not enabled. Do you want to go to settings menu?</string>
    <string name="title_activity_confirm_number">ConfirmNumber</string>
    <string name="send">발송</string>
    <string name="cancel">취소</string>
    <string name="canceling">Cancelling&#8230;</string>
    <string name="enter_email">"등록된 이메일을 입력해 주세요 ( 자세한 내용이 이메일로 발송됩니다. )"</string>
    <string name="capture">이미지 캡춰</string>
    <string name="gallery">겔러리 열기</string>
    <string name="or">OR</string>
    <string name="email">이메일 *</string>
    <string name="referral_code">Referral code</string>
    <string name="password">비밀번호 *</string>
    <string name="full_name">이름</string>
    <string name="phone">연락처</string>
    <string name="mand_full_name">이름 *</string>
    <string name="mand_phone">연락처 *</string>
    <string name="weight_kg">무게 (톤)</string>
    <string name="mand_weight">무게 *</string>
    <string name="mand_quantity">수량 *</string>
    <string name="mand_address">주소 *</string>
    <string name="address">주소</string>
    <string name="You_did_not_enter_valid_card">You did not enter a valid card</string>
    <string name="card_num_empty">Card number should not be empty</string>
    <string name="month_field_empty">Month field should not be empty</string>
    <string name="year_field_empty">Year field should not be empty</string>
    <string name="progressMessage">Adding card&#8230;</string>
    <string name="add_card_fail">You Can not add card at this momment.</string>
    <string name="add_credit_card">신용카드추가</string>
    <string name="credit_card_num">신용카드번호</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="cvv">CVV</string>
    <string name="error">Error:</string>
    <string name="validationErrors">Validation Errors</string>
    <string name="SecurityCodeHelp">보안코드</string>
    <string name="enter_valid_no">Enter valid card details</string>
    <string name="CreditCardNumberHelp">신용카드번호를 입력해 주세요.</string>
    <string name="scan_credit_card">Scan your card</string>
    <string name="enter_credit_card">신용카드 정보를 입력해 주세요</string>
    <string name="not_a_valid_card">유효한 카드정보가 입력되지 않았습니다.</string>
    <string name="progress">진행</string>
    <string name="done">완료</string>
    <string name="delete">삭제</string>
    <string name="add">추가</string>
    <string name="ok">OK</string>
    <string name="off">Off</string>
    <string name="card">Card</string>
    <string name="liveChat">Live Chat</string>
    <string-array name="navdraw">
        
        <item>신규 발송</item>
        
        <item>나의주문</item>
        
        <item>결제</item>
        
        <item>좋아하는 주소</item>
        
        <item>지원</item>
        
        <item>초대하기</item>
        
        <item>About</item>
        
        <item>Live Chat</item>
    </string-array>
    <string name="canclereasonTitle">취소사유</string>
    <string-array name="cancleReason">
        <item>실수로 예약했습니다.</item>
        <item>생각이 바뀌었습니다.</item>
        <item>시간이 너무 오래걸립니다.</item>
        <item>기타</item>
    </string-array>
    <string name="double_press_exit">뒤로가기를 누르면 종료됩니다!</string>
    <string name="pickup_location">픽업장소 설정</string>
    <string name="pick_up_now">지금예약</string>
    <string name="pick_up_leter">나중에 예약</string>
    <string name="invalide_time">시간이 잘못되엇습니다</string>
    <string name="pickup">픽업</string>
    <string name="order_status">주문상태</string>
    <string name="now">지금</string>
    <string name="schedule">스케쥴</string>
    <string name="min">분</string>
    <string name="notAvailable">불가능합니다</string>
    <string name="drivers">기사</string>
    <string name="nodriver">기사가 없습니다</string>
    <string name="nodriver1">현재 가능한 기사가 없습니다.</string>
    <string name="distance">거리</string>
    <string name="min_fair">최소 운임</string>
    <string name="max_size">최대 사이즈</string>
    <string name="searchAddr">Please turn on Location or search address</string>
    <string name="search">Searching&#8230;</string>
    <string name="AddrBlank">Address Can not left blank search address</string>
    <string name="fname">성</string>
    <string name="lname">명</string>
    <string name="TakePhoto">사진촬영</string>
    <string name="ChoosefromGallery">겔러리에서 선택</string>
    <string name="Remove">삭제</string>
    <string name="AddPhoto">사진추가!</string>
    <string name="photo">사진</string>
    <string name="Add_Photo">사진추가</string>
    <string name="hint">0</string>
    <string name="invite">초대</string>
    <string name="about">About</string>
    <string name="apply">적용</string>
    <string name="apply_coupon">쿠폰 적용</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="password_cap">PASSWORD</string>
    <string name="re_enter_password">RE-ENTER PASSWORD</string>
    <string name="enter_password">ENTER PASSWORD</string>
    <string name="oldPasswdInfo">Please enter your current password to confirm</string>
    <string name="please_enter_new_password">Please enter new Password</string>
    <string name="ratingCommentLabel">Sorry about the inconvenience please comment below.</string>
    <string name="add_the_feedback">Add the feedback</string>
    <string name="book_runner">발송예약</string>
    <string name="my_bookings">나의예약</string>
    <string name="rate_card">카드가격</string>
    <string name="payments">결제</string>
    <string name="support">고객지원</string>
    <string name="_continue">계속</string>
</resources>