<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_10dp"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tvChangePswdInfo"
        android:text="@string/oldPasswdInfo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:paddingLeft="@dimen/dimen_4dp"
        android:paddingStart="@dimen/dimen_4dp"
        android:paddingEnd="@dimen/dimen_0dp"
        android:paddingRight="@dimen/dimen_0dp"
        android:gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilOldPswd_changePswdDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietOldPswd_changePswdDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLength="30"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:layout_marginBottom="@dimen/dimen_40dp"
            android:textSize="@dimen/textsize_15_74sp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnOk_changePswdDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_layout"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18sp" />

</LinearLayout>