<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:isScrollContainer="true">

    <!--Custom toolbar-->
    <include
        android:id="@+id/include_mailEditCtb"
        layout="@layout/layout_toolbar_custom"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/include_mailEditCtb"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_above="@+id/btnSubmit_EditPassword">

        <LinearLayout
            android:id="@+id/rlMain_EditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Email Editing info-->
            <TextView
                android:id="@+id/tvPasswordMsg_EditPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_30dp"
                android:layout_marginRight="@dimen/dimen_30dp"
                android:layout_marginStart="@dimen/dimen_30dp"
                android:layout_marginEnd="@dimen/dimen_30dp"
                android:paddingTop="@dimen/dimen_20dp"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="@dimen/dimen_3dp"
                android:paddingStart="@dimen/dimen_3dp"
                android:paddingEnd="@dimen/dimen_0dp"
                android:paddingRight="@dimen/dimen_0dp"
                android:textSize="@dimen/textsize_15_74sp"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:text="@string/please_enter_new_password"/>

            <!--New Password -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilNewPassword_EditPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimen_30dp"
                android:layout_marginRight="@dimen/dimen_30dp"
                android:layout_marginStart="@dimen/dimen_30dp"
                android:layout_marginEnd="@dimen/dimen_30dp"
                android:layout_marginBottom="@dimen/dimen_10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietNewPassword_EditPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/dimen_12dp"
                    android:textSize="@dimen/textsize_15_74sp"
                    android:maxLength="20"
                    android:hint="@string/password_cap"/>
            </android.support.design.widget.TextInputLayout>

            <!--Re-enter password-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilReEnterPassword_EditPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimen_30dp"
                android:layout_marginRight="@dimen/dimen_30dp"
                android:layout_marginStart="@dimen/dimen_30dp"
                android:layout_marginEnd="@dimen/dimen_30dp"
                android:layout_marginBottom="@dimen/dimen_10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietReEnterPassword_EditPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/dimen_12dp"
                    android:textSize="@dimen/textsize_15_74sp"
                    android:maxLength="30"
                    android:hint="@string/re_enter_password"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:background="@color/light_shadow"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
    <!--Submit button -->
    <Button
        android:id="@+id/btnSubmit_EditPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18sp"
        android:background="@drawable/selector_layout"/>
</RelativeLayout>